Fixed svg getting cut off

--- a/src/stylesheets/components/_github-button.scss
+++ b/src/stylesheets/components/_github-button.scss
@@ -5,6 +5,7 @@
 
 .pf-github-button-svg {
   overflow: visible;
+  width: 100%;
 }
 
 .pf-github-button:hover {
